--- a/index.html
+++ b/index.html
@@ -21,3 +21,29 @@
   ]
 }
 </script>
+
+
+<script
+  id="livechat-widget-script"
+  data-position="right"
+  data-email="youremail@example.com"
+  type="application/json">
+{
+  "flow": [
+    {
+      "question": "🌟 What do you need help with?",
+      "type": "options",
+      "options": ["Support", "Sales", "Partnership"]
+    },
+    {
+      "question": "📛 Your Name:",
+      "type": "text"
+    },
+    {
+      "question": "📞 Contact Number:",
+      "type": "text"
+    }
+  ]
+}
+</script>
+
